# my_cs

./: .gitignore  README.md  plan.md
CProgramming/: .makefile.swp  .test.c.swp  README.md
CProgramming/makecompilation/: makefile  readme.md  test
CProgramming/multithreading/: README.md
CProgramming/networking/: README.md
CProgramming/project/: Makefile  pbcopy
cpp/projects/: 01_helloworld  01_helloworld.cpp
datastructures/: README.md
finbourne/: README.md
python/fundamentals/: Enumerations.ipynb  Probability.ipynb  README.md  closures_decorators.ipynb  csv.ipynb  date_time.ipynb  exceptions.ipynb  files_io.ipynb  fundamentals.ipynb  generators.ipynb  graphing.ipynb  inheritence.ipynb  iterables.ipynb  iteration_tools.ipynb  metaclass.ipynb  modules.ipynb  numpy.ipynb  oop.ipynb  pydanticNotes.ipynb  pyproject.toml  randomMathStat.ipynb  sequences.ipynb  serializationFormats.ipynb
python/fundamentals/async/: async_deep01.py  async_example01.py  async_example02.py  async_fundamentals.py  profile_report.html  profile_report.json  task_groups.py
python/fundamentals/data/: cleaned_census.csv
python/fundamentals/modules_examples/: module00.py  module01.py
python/fundamentals/parallelism/: locking.py  threading01.py  threading02.py  wiki.py  wikiPrices.yaml
python/fundamentals/parallelism/multiproc/: multiproc01.py  multiproc02.py  procpool.py
python/fundamentals/parallelism/workers/: pgWorker.py  squarer.py  wikiScraper.py  yahooWorker.py
python/ml/: CaliforniaHousing.ipynb  openai_test.py  pyproject.toml
the_missing_semester/: readme.md
(+148 files in other folders)
