[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
]
